# GenerativeAI_Hw1_Part1

./: .gitignore  GenAI_Homework_1_Part_1.ipynb  README.md  chainlit.md  pyproject.toml
src/: chainlit.py  settings.py  tools.py  utils.py
